error unknown angular attribute

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
                   
                 </div> -->
                 <div class="icon">
-                  <i class="fas fa-cog"></i>
+                  <i [class]="menu.icon"></i>
                 </div>
                 <div class="text">
                   <div class="content">
@@ -38,7 +38,7 @@
                       <span>{{ menu.label }}</span>
                     </div>
                     <div class="brief">
-                      <span>Lorem itsum sit doler amit ape lanjiao</span>
+                      <span>{{ menu.brief }}</span>
                     </div>
                   </div>
                   
