--- a/src/app/components/pages/activities/events/events.component.html
+++ b/src/app/components/pages/activities/events/events.component.html
@@ -43,7 +43,7 @@
 
         <div class="events">
             <div class="events-items">
-                <div class="item" *ngFor="let item of [0, 0, 0, 0]">
+                <div class="item" *ngFor="let item of [0, 0, 0, 0, 0, 0, 0, 0]">
                     <div class="img"></div>
                     <div class="info">
                         <div class="title">
