--- a/src/app/components/pages/activities/events/events.component.scss
+++ b/src/app/components/pages/activities/events/events.component.scss
@@ -71,7 +71,12 @@
             padding: 10px 15px;
             margin-bottom: 5px;
 
+            border-radius: 10px;
+
             background-color: rgba(#929DB9, .5);
+
+            overflow: hidden;
+
             &.active {
                 background-color: rgba(#929DB9, 1);
                 margin-bottom: 20px;
@@ -97,15 +102,13 @@
 
     margin-left: 230px;
 
-    background-color: #929DB9;
+    /* background-color: #C8CEDC; */
 
     & > .events-items {
         position: relative;
 
         height: fit-content;
         width: 100%;
-
-        padding: 10px 0;
 
         & > .item {
             position: relative;
@@ -115,27 +118,36 @@
 
             padding: 10px 30px;
 
+            margin-bottom: 30px;
 
-            display: flex;
+            border-radius: 0 15px 0 15px;
+            box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, .3);
+
+            overflow: hidden;
 
             & > .img {
-                position: relative;
+                position: absolute;
+                left: 0;
+                top: 0;
 
-                height: 200px;
+                height: 100%;
                 width: 300px;
 
-                background-color: #fff;
+                background-image: url('../../../../../assets/sunge\ perak.jpg');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
 
             & > .info {
                 position: relative;
 
                 height: 200px;
-                width: calc(100% - 330px);
+                width: calc(100% - 300px);
 
-                margin-left: 30px;
+                margin-left: 300px;
 
-                padding: 10px 30px;
+                padding: 10px 20px;
 
                 & > .title {
                     position: relative;
@@ -165,7 +177,7 @@
                         height: 50%;
                         width: 100%;
 
-                        background: linear-gradient(0deg, rgba(#929DB9,1) 0%, rgba(16,41,105,0) 100%);
+                        background: linear-gradient(0deg, rgba(#fff,1) 0%, rgba(16,41,105,0) 100%);
                     }
                 }
 
