--- a/src/app/components/pages/activities/gcp/gcp.component.html
+++ b/src/app/components/pages/activities/gcp/gcp.component.html
@@ -16,6 +16,76 @@
     </div>
 
     <div class="content">
-        in progress sabo2
+        <div class="header">
+            <span>What is GCP?</span>
+        </div>
+
+        <div class="long-text">
+            <p>
+                The Clobal Certification Program (CCP) is an Industry-Academia initiative to certify professionals with high-skills towards Industry 4.0 qualifications and the primary focus of GCP is the Automation and Smart Manufacturing (ASM) but not limited to Agriculture, Automotive and Timber industries.
+            </p>
+            <p>
+                Students receive both theoretical and practical laboratory instructions through a combination of online learning resources, hands-on testing and debugging of robotics and automation systems. Areas of study include Lab-based, Technical-based, Competency-based and MOOC-based modules. 
+            </p>
+            <p>
+                The CCP equips low-skilled employees with a wide range of modern hands-on experiences in industry to achieve a high-skilled status. It also certifications from Supervisors, covers Technicians, Executives, and Engineers up to Managerial level.
+            </p>
+        </div>
+
+        <div class="header">
+            <span>
+                How does the GCP work?
+            </span>
+        </div>
+
+        <div class="long-text">
+            <p>The GCP ecosystem consists of 3 stakeholders brought together by the GCP Online Platform</p>
+            <p>The stakeholders are</p>
+        </div>
+
+        <div class="stakeholders">
+            <div class="items">
+                <div class="item">
+                    <div class="icon">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="text">
+                        <div class="header">
+                            <span>Content Supply Partners</span>
+                        </div>
+                        <div class="brief">
+                            <span>Academic entities or training ogranization with training content or robotics and automation. Content consists online and offline courses (courses taught in physical classes)</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="icon">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="text">
+                        <div class="header">
+                            <span>Advisory Panel</span>
+                        </div>
+                        <div class="brief">
+                            <span>Panel of experts from both industry and academia who are responsible to verify and accreditate content supplied from the <b>Content Supply Partners</b> before uploaded into the <b>GCP Online Platform</b></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="icon">
+                        <i class="fas fa-cog"></i>
+                    </div>
+                    <div class="text">
+                        <div class="header">
+                            <span>Market Partners</span>
+                        </div>
+                        <div class="brief">
+                            <span>Consumers of the training courses consisting of industry workers and students in the robotics field. Market Partners access the courses through the <b>GCP Online Platform</b></span>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </div>
