--- a/src/app/components/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/components/pages/admin/dashboard/dashboard.component.html
@@ -1,3 +1,18 @@
+<div class="welcome">
+    <div class="welcome-bg">
+        <div class="img"></div>
+        <div class="overlay"></div>
+    </div>
+
+    <div class="user-info">
+        <div class="user-img">
+            <div class="img"></div>
+        </div>
+        <div class="user-name">
+            <span>Welcome, Muhammad Aidil Syazwan Hamdan</span>
+        </div>
+    </div>
+</div>
 <div class="wrapper">
     <div class="events">
         <div class="label">
