--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -50,7 +50,7 @@
 
 <div class="section s2">
     <div class="section-header">
-        <span>Welcome to MyRAS official website!</span>
+        <span>Welcome to MyRAS official web portal!</span>
     </div>
 
     <div class="section-brief">
