--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -456,9 +456,9 @@
     padding: 0;
 
     width: 100%;
-    height: 400px;
+    height: fit-content;
 
-    background-color:rgb(15, 37, 87);
+    /* background-color:rgb(15, 37, 87); */
 
     
 }
