--- a/src/app/components/pages/activities/gcp/gcp.component.scss
+++ b/src/app/components/pages/activities/gcp/gcp.component.scss
@@ -5,11 +5,7 @@
     height: fit-content;
     width: 100%;
 
-    /* margin: 0 100px; */
-   /*  margin-top: 80px; */
-
     background-color: white;
-    /* box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, .1); */
 }
 
 .header-banner > .banner > .svg {
@@ -26,4 +22,182 @@
     width: 100%;
 
     padding: 100px 12%;
+
+    & > .header {
+        position: relative;
+
+        height: 80px;
+        width: 100%;
+
+        text-align: center;
+        line-height: 80px;
+
+        font-size: 40px;
+        font-weight: bolder;
+
+        color: orange;
+
+        overflow: hidden;
+
+        /* &:before {
+            content: '';
+
+            position: absolute;
+            left: 0;
+            top: 0px;
+
+            height: 80px;
+            width: 100%;
+
+            background: radial-gradient(circle, rgba(15,37,87,1) 0%, rgba(15,37,87,0) 100%);
+
+            z-index: 1;
+        } */
+
+        & > span {
+            position: relative;
+
+            z-index: 2;
+        }
+    }
+
+    & > .long-text {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 50px 100px;
+
+        text-align: center;
+
+        & > p {
+            font-size: 18px;
+
+            padding-bottom: 30px;
+        }
+    }
 }
+
+.stakeholders {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    & > .items {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+
+        & > .item {
+            position: relative;
+
+            height: 300px;
+            width: 100%;
+
+            /* border: 1px solid rgba(black, .5); */
+
+            border-radius: 5px;
+
+            box-shadow: 1px 1px 5px 0 rgba(black, .3);
+
+            margin-bottom: 30px;
+
+            overflow: hidden;
+            
+            &:before {
+                content: '';
+
+                position: absolute;
+                left: -290px;
+                top: 0;
+
+                height: 100%;
+                width: 300px;
+
+                background-color: orange;
+
+                z-index: 1;
+
+                transition: .3s all;
+            }
+
+            & > .icon {
+                position: relative;
+
+                float: left;
+
+                height: 100%;
+                width: 300px;
+
+                z-index: 2;
+
+                & > i {
+                    display: inline-block;
+
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+
+                    height: fit-content;
+                    width: fit-content;
+
+                    font-size: 100px;
+                    color: orange;
+                    
+                    transition: .7s all;
+                    transition-delay: .2s;
+                }
+            }
+
+            & > .text {
+                position: relative;
+
+                float: right;
+
+                height: 100%;
+                width: calc(100% - 300px);
+
+                padding: 30px 50px;
+
+                & > .header {
+                    position: relative;
+
+                    height: fit-content;
+                    width: 100%;
+
+                    text-align: center;
+                    font-size: 24px;
+                    color: rgba(15,37,87,1);
+
+                    padding: 15px 0;
+                }
+
+                & > .brief {
+                    position: relative;
+
+                    height: fit-content;
+                    width: 100%;
+
+                    font-size: 18px;
+                }
+            }
+
+            &:hover {
+                &:before {
+                    left: 0;
+                }
+                & > .icon > i {
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
