--- a/src/app/components/pages/admin/dashboard/dashboard.component.scss
+++ b/src/app/components/pages/admin/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
     position: relative;
 
-    padding: 30px 10px;
+    padding: 40px 30px;
 
     min-height: 100vh;
     height: 100%;
@@ -26,11 +26,99 @@
     }
 }
 
+.welcome {
+    position: relative;
+
+    height: 400px;
+    width: 100%;
+
+    overflow: hidden;
+
+    & > .welcome-bg {
+        position: relative;
+
+        height: 100%;
+        width: 100%;
+
+        & > .img {
+            position: relative;
+
+            height: 100%;
+            width: 100%;
+
+            background-image: url('../../../../../assets/panaroma-city.jpg');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+       
+        & > .overlay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+
+            height: 50%;
+            width: 100%;
+
+            background: rgb(0,0,0);
+            background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5021358885351015) 72%, rgba(0,0,0,0) 100%);
+        }
+    }
+
+    & > .user-info {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        height: 100%;
+        width: 100%;
+
+        & > .user-img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            height: 150px;
+            width: 150px;
+
+            border-radius: 50%;
+
+            overflow: hidden;
+
+            & > .img {
+                position: relative;
+
+                height: 100%;
+                width: 100%;
+
+                background-image: url('../../../../../assets/login-bg.jpg');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        }
+
+        & > .user-name {
+            position: absolute;
+            bottom: 30px;
+            left: 0;
+
+            height: fit-content;
+            width: 100%;
+
+            color: white;
+            font-size: 25px;
+            
+            text-align: center;
+        }
+    }
+}
 
 .events {
     position: relative;
 
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     width: 100%;
     height: 80px;
@@ -143,7 +231,7 @@
 .summary {
     position: relative;
 
-    padding-bottom: 40px;
+    padding-bottom: 30px;
 
     width: 100%;
     height: fit-content;
