--- a/src/app/components/sections/footer/footer.component.html
+++ b/src/app/components/sections/footer/footer.component.html
@@ -1,4 +1,79 @@
+<div class="wrapper">
+    <div class="bg-poly-overlay">
 
+    </div>
+    <div class="container">
+        <div class="navs">
+            <div class="items">
+                <div class="item" *ngFor="let item of navItems">
+                    <div class="header">
+                        <span>{{ item.label }}</span>
+                    </div>
+                    <div class="child">
+                        <div class="items">
+                            <div class="item" *ngFor="let child of item.menu">
+                                <span>{{ child.label }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="social-media">
+            <div class="header">
+                <span>Follow us on</span>
+            </div>
+            <div class="items">
+                <div class="item">
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+                <div class="item">
+                    <i class="fab fa-instagram-square"></i>
+                </div>
+                <div class="item">
+                    <i class="fab fa-twitter-square"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div class="info">
+            <div class="logo"></div>
+            <!-- <div class="label">
+                <span>Malaysian Robotic & Automation Society</span>
+            </div> -->
+        </div>
+        <div class="statement">
+            <span>Copyright © 2020 Official Portal - Malaysian Robotic & Automation Society (MyRAS)</span>
+        </div>
+    </div>
+    <!-- <div class="header">
+        <span>Malaysia Robotics and Automation Society</span>
+    </div>
+    <div class="myras-brief">
+        <span>
+            To be professional platform where 
+            all engineers and technologies can
+            meet and network to discuss about robotics and automation program
+            in the country.
+        </span>
+    </div>
+
+    <div class="myras-contact">
+        <div class="header">
+            <span>Contact us!</span>
+        </div>
+
+        <div class="contact-items">
+            <div class="item">
+                
+            </div>
+        </div>
+    </div> -->
+</div>
+
+<!-- 
 <div class="wrapper">
     <div class="left">
         <div class="footer-info">
@@ -34,9 +109,6 @@
             
         </div>
         <div class="contacts">
-            <!-- <div class="logo">
-                <img src="http://localhost:4200/assets/myras-logo.png">
-            </div> -->
             <div class="header">
                 <span>Follow us</span>
             </div>
@@ -72,20 +144,4 @@
 </div>
 <div class="copyright">
     <span>Copyright © Malaysian Robotics and Automation Society 2020 myras.org All Rights Reserved</span>
-</div>
-
-
-
-  
-
-  
-  
-<!-- <div class="btn-admin">
-    <span>Admin</span>
-</div>
-
-<div class="btn-social">
-    <span>Instagram</span>
-    <span>Twitter</span>
-    <span>Facebook</span>
 </div> -->
