--- a/src/app/components/sections/footer/footer.component.scss
+++ b/src/app/components/sections/footer/footer.component.scss
@@ -1,6 +1,269 @@
 .wrapper {
     position: relative;
 
+    height: fit-content;
+    width: 100%;
+
+    background-color:rgb(15, 37, 87);
+
+    & > .gradient-transition {
+        position: relative;
+
+        height: 150px;
+        width: 100%;
+
+        background: linear-gradient(0deg, rgba(15,37,87,1) 0%, rgba(15,37,87,0.8690826672465861) 39%, rgba(15,37,87,0.7570378493194152) 65%, rgba(15,37,87,0.5777661406359419) 82%, rgba(15,37,87,0) 100%);
+    }
+
+    & > .container {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 0 50px;
+    }
+
+    & .social-media {
+        position: relative;
+
+        height: fit-content;
+        width: 500px;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        padding-bottom: 30px;
+
+        & > .header {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            text-align: center;
+
+            font-size: 30px;
+            font-weight: bold;
+
+            letter-spacing: 2px;
+            color: orange;
+
+            padding-bottom: 30px;
+        }
+
+        & > .items {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            display: flex;
+            justify-content: space-between;
+
+            & > .item {
+                position: relative;
+
+                height: fit-content;
+                width: fit-content;
+
+                font-size: 50px;
+                color: white;
+
+                opacity: .5;
+
+                padding: 15px;
+
+                cursor: pointer;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    & .navs {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 50px 200px;
+        padding-bottom: 30px;
+
+        & > .items {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            /* padding: 0 100px; */
+            padding-bottom: 30px;
+
+            display: flex;
+            justify-content: space-between;
+
+            & > .item {
+                position: relative;
+
+                height: fit-content;
+                width: fit-content;
+
+                display: flex;
+                flex-direction: column;
+
+                & > .header {
+                    position: relative;
+
+                    height: fit-content;
+                    width: 100%;
+
+                    font-size: 20px;
+
+                    color: white;
+
+                    padding: 10px 0;
+                }
+
+                & > .child > .items > .item {
+                    padding-bottom: 5px;
+                    font-size: 14px;
+                    color: white;
+                    opacity: .7;
+
+                    cursor: pointer;
+
+                    &:hover {
+                        color: orange;
+                    }
+                }
+            }
+        }
+    }
+
+    & .copyright {
+        position: relative;
+
+        height: 80px;
+        width: 100%;
+
+        background-color: rgba(black, .5);
+
+        & > .info {
+            position: relative;
+
+            float: left;
+
+            height: 100%;
+            width: 240px;
+
+            display: flex;
+
+            & > .logo {
+                position: absolute;
+                left: 30px;
+                top: 50%;
+                transform: translateY(-50%);
+
+                height: 35px;
+                width: 180px;
+
+                background-image: url('../../../../assets/myras-logo.png');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+
+                filter: grayscale(1);
+                transition: .3s all;
+            }
+
+            & > .label {
+                position: relative;
+
+                height: 80px;
+                width: calc(100% - 200px);
+
+                margin-left: 200px;
+
+                padding: 0 30px;
+
+                line-height: 80px;
+
+                color: white;
+                font-size: 18px;
+                
+            }
+        }
+
+        & > .statement {
+            position: relative;
+
+            float: right;
+
+            height: 80px;
+            width: calc(100% - 240px);
+
+            text-align: center;
+            line-height: 80px;
+
+            color: white;
+            font-size: 16px;
+        }
+
+        opacity: .5;
+        transition: .3s all;
+
+        &:hover {
+            opacity: 1;
+            & > .info > .logo {
+                filter: grayscale(0);
+            }
+        }
+    }
+    /* & > .header {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 30px 0;
+
+        text-align: center;
+
+        font-size: 30px;
+        font-weight: bolder;
+        color: orange;
+    }
+
+    & > .myras-brief {
+        position: relative;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        height: fit-content;
+        width: 40%;
+        min-width: 400px;
+
+        text-align: center;
+
+        font-size: 18px;
+        color: white;
+
+        margin-bottom: 30px;
+    }
+
+    & > .myras-contact {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+    } */
+}
+
+/* .wrapper {
+    position: relative;
+
     height: calc(100% - 100px);
     width: 100%;
 
@@ -101,15 +364,6 @@
                     cursor: pointer;
                 }
 
-
-                /* &:hover {
-                    cursor: pointer;
-
-                    &:before {
-                        border-left: 200px solid orange;
-                        opacity: 0;
-                    }
-                } */
                 &:before {
                     position: absolute;
                     left: 0;
@@ -145,7 +399,6 @@
     & > .contacts {
         position: absolute;
         right: 20%;
-        //top: 34px;
         bottom: 50px;
         transform: translateX(-50%);
 
@@ -244,4 +497,4 @@
 
         text-align: center;
     }
-}
+} */
