--- a/src/app/components/pages/admin/events/events.component.html
+++ b/src/app/components/pages/admin/events/events.component.html
@@ -2,11 +2,11 @@
     <div class="events">
         <div class="events-header">
             <i class="fas fa-list"></i>
-            <span>News</span>
+            <span>Events</span>
 
             <div class="btn-add">
                 <i class="fas fa-cog"></i>
-                <span>Post news</span>
+                <span>New event</span>
             </div>
         </div>
         <div class="events-body">
