--- a/src/app/components/shared/news/post/post.component.html
+++ b/src/app/components/shared/news/post/post.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
     <div class="news-add">
         <div class="header">
-            <span>Post news</span>
+            <i class="fas fa-list"></i>
+            <span>New post</span>
         </div>
 
         <div class="body">
