--- a/src/app/components/shared/news/post/post.component.scss
+++ b/src/app/components/shared/news/post/post.component.scss
@@ -1,12 +1,12 @@
 .wrapper {
     position: relative;
 
+    padding: 30px 40px;
 }
 .news-add {
     position: relative;
 
-    width: 90%;
-    max-width: 1024px;
+    width: 100%;
     height: auto;
 
     margin-left: auto;
@@ -15,9 +15,9 @@
     background-color: white;
 
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
-    border-radius: 3px;
+    border-radius: 5px;
 
-    box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, .3);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, .1);
 
     /* transition: .3s all;
     &:hover {
@@ -27,17 +27,19 @@
     & > .header {
         position: relative;
 
+        height: fit-content;
         width: 100%;
-        height: auto;
 
-        padding: 20px 30px;
+        padding: 10px 0;
 
-        background-color: rgba(255, 166, 0, 0.2);
-        /* color: white; */
-        text-transform: uppercase;
-        font-size: 24px;
+        font-size: 20px;
 
-        border-bottom: 1px dashed rgba(0, 0, 0, 0.1)
+        border-bottom: 1px solid orange;
+
+        & > i {
+            color: orange;
+            padding: 0 30px;
+        }
     }
 
     & > .body {
